--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ include CONTRIBUTING.rst
 include HISTORY.rst
 include LICENSE
 include README.rst
-recursive-include prompt_responses *.html *.png *.gif *js *.css *jpg *jpeg *svg *py
+recursive-include prompt_responses *py
