compatability down to django 1.8 and 100% code coverage

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,15 @@
 [tox]
 envlist =
-    {py27,py33,py34,py35}-django-18
+    {py27,py34,py35}-django-18
     {py27,py34,py35}-django-19
     {py27,py34,py35}-django-110
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/prompt_responses
-commands = coverage run --source prompt_responses runtests.py
+commands =
+    coverage run --source prompt_responses runtests.py
+    coverage report -m --skip-covered
 deps =
     django-18: Django>=1.8,<1.9
     django-19: Django>=1.9,<1.10
