--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist =
-    {py27,py34,py35}-django-19
     {py27,py34,py35}-django-110
     {py27,py34,py35}-django-111
+    {py34,py35}-django-20
 
 [testenv]
 setenv =
@@ -11,9 +11,9 @@ commands =
     coverage run --source prompt_responses runtests.py
     coverage report -m --skip-covered
 deps =
-    django-19: Django<1.10
-    django-110: Django>=1.10,<1.11
-    django-111: Django>=1.11
+    django-110: Django<1.11
+    django-111: Django>=1.11,<1.12
+    django-20: Django>=2.0
     -r{toxinidir}/requirements_test.txt
 basepython =
     py35: python3.5
